tests/rosetta/out/Kotlin/abstract-type.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/abstract-type.kt:20:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.name
                ^
/tmp/abstract-type.kt:25:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.name
                ^
/tmp/abstract-type.kt:42:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.kind
                ^
/tmp/abstract-type.kt:47:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.kind
                ^
/tmp/abstract-type.kt:65:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.kind
                ^
/tmp/abstract-type.kt:66:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.name
                ^
/tmp/abstract-type.kt:70:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.kind
                ^
/tmp/abstract-type.kt:71:17: error: names _, __, ___, ..., are reserved in Kotlin
            val _ = __t.name
                ^
